<resources>
    <string name="app_name">MyLogin</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="welcome_mssg">Welcome Home</string>
    <string name="err_user">Not valid user</string>
    <string name="err_empty">Fields are required</string>
    <string name="create_new_user">Create New User</string>
    <string name="register">Register</string>
    <string name="err_register">Register failed</string>
</resources>
